setup userController and userServise and userTable with the tpypeorm-check validate email and passsword
