# src/userController/userController.ts
@@ -15,8 +15,10 @@ import {
     Request,
   } from "tsoa";
   
-  import {UserService, getAllUsers,userAuthentication} from '../userService/userService'
+  
+  import {UserService, getUsers, userAuthentication} from '../userService/userService'
   import { createToken } from "../createJWT";
+  import { User } from "../db/userTable";
 
 interface params{
   firstname:string,
@@ -26,7 +28,7 @@ interface params{
 }
 
   @Route("user")
-  export class UsersController extends Controller {
+   export class UserController extends Controller {
     @SuccessResponse("201", "Created") 
     @Tags("Post-User")
     @Post("/")
@@ -35,8 +37,16 @@ interface params{
     ): Promise<void | string> {
 
       try {
-        await new UserService().userLogin(userParams);
-        return createToken(userParams.email, "user")
+        const emailRegex = /^[a-zA-Z0-9._%+-]+@gmail\.(com|de|org|net|[a-zA-Z]{2,})$/;
+        const passwordRegex = /^(?=.*[A-Z])(?=.*\d)(?=.*[!@#$%^&*()_+={}[\]:;"'<>,.?/\\|-]).{8,}$/;
+
+        if(!emailRegex.test(userParams.email) || !passwordRegex.test(userParams.password)){
+          return "Invalid email or password"
+        }else{
+          await new UserService().userLogin(userParams);
+          return createToken(userParams.email, "user")
+        }
+        
     } catch (error) {
          console.log(error)
          throw error;
@@ -44,22 +54,24 @@ interface params{
     }
   }
 
-  interface UsersResponseModel {
-    firstname: string;
-    lastname: string;
-    email: string;
-    password:string;
-  }
+
 
 
   @Route("secure")
 export class SecureController extends Controller {
-    @Security("jwt", ["user"])
     @Tags("Get-User")
-    @Get("getAllUsers")
-    public async userInfo(): Promise<UsersResponseModel[]> {
-      const users= await new getAllUsers().getUsers()
-        return users ;
+    @Get("getUsers")
+    public async userInfo(): Promise<User[]> {
+      try{
+        console.log("Attempting to fetch all users...");
+        const users = await new getUsers().getAllUsers();
+        return users
+
+      }catch(error:any){
+        console.log(error)
+        throw new Error("Error in getting all users:", error);
+      }
+        
     }
 }
 
@@ -67,12 +79,27 @@ interface UserResponseModel {
   email: string;
   password:string;
 }
+
+interface checkUserExists{
+  token:string | undefined,
+  isUser:Boolean
+}
 @Route("/user")
 export class getUser extends Controller { 
     @Tags("User")
     @Post("login")
-    public async userLogin( @Body() user:UserResponseModel): Promise<Boolean> {
-      const res= await new userAuthentication().getUser(user)
-        return res ;
+    public async userLogin( @Body() user:UserResponseModel): Promise<checkUserExists| string> {
+      try{
+        const userExists = await new userAuthentication().getUser(user)
+        if(userExists){
+          const result={token:createToken(user.email, "user"), isUser:userExists}
+          return result
+        }
+        return "user not found"
+    }
+    catch(error:any){
+      console.log(error)
+      throw new Error("Error in getting user:", error);
+    }
     }
 }
